# QuantClaw

./: .env.example  .gitignore  .npmignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIAGNOSTIC_FEEDBACK_SUMMARY.md  FEEDBACK_LOOP_PLAN.md  INTEGRATION_STEPS.md  LICENSE  README.md  oh_my_codex_harness_engineering_guide.ipynb  package.json  pyproject.toml  start.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  strategy_request.md
.github/workflows/: ci.yml  release.yml
docs/: AGENTS.md  GOALS.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md  quickstart.md
docs/plans/: 2026-04-05-doctor-command-design.md  2026-04-05-orchestration-activation-design.md  2026-04-05-orchestration-activation-impl.md  2026-04-05-orchestration-engine-design.md  2026-04-05-orchestration-engine-impl.md  2026-04-05-sandbox-design.md  2026-04-05-sandbox-impl.md  2026-04-05-trading-floor-implementation.md  2026-04-05-trading-floor-playground-design.md  2026-04-06-miner-trainer-design.md  2026-04-06-miner-trainer-workflow-impl.md  2026-04-06-scheduler-intelligence-design.md  2026-04-06-scheduler-intelligence-impl.md  2026-04-06-workflow-efficiency-design.md  2026-04-08-harness-design-patterns.md
quantclaw/: __init__.py  cli.py  daemon.py  doctor.py  main.py
quantclaw/agents/: __init__.py  base.py  compliance.py  debugger.py  executor.py  ingestor.py  manifest.py  market_data.py  miner.py  reporter.py  researcher.py  risk_monitor.py  scheduler.py  sentinel.py  trainer.py  validator.py
quantclaw/config/: default.yaml  loader.py
quantclaw/dashboard/: api.py  model_catalog.py  oauth.py
quantclaw/events/: __init__.py  bus.py  routing.py  types.py
quantclaw/execution/: dispatcher.py  plan.py  planner.py  pool.py  router.py  tool_loop.py
quantclaw/notifications/: __init__.py  config.py  discord.py  formatter.py  slack.py  telegram.py
quantclaw/orchestration/: __init__.py  autonomy.py  campaigns.py  deployments.py  diagnostic_router.py  diagnostics.py  narration.py  ooda.py  playbook.py  scaffolding.py  trust.py  workflows.py
quantclaw/plugins/: __init__.py  data_cache.py  interfaces.py  manager.py
quantclaw/sandbox/: __init__.py  factor_evaluator.py  model_trainer.py  runner.py  sandbox.py  security.py
quantclaw/sidecar/: package.json  server.js
scripts/: secret_scan.py
tests/: test_activation_integration.py  test_agent_progress_narratives.py  test_agent_stubs.py  test_agents.py  test_autonomy.py  test_builtin_plugins.py  test_cache_legacy_prune.py  test_campaigns.py  test_cancellation.py  test_config.py  test_dag_execution.py  test_dashboard_api.py  test_data_cache.py  test_doctor.py  test_dynamic_fields.py  test_e2e_data_flow.py  test_events.py  test_events_api.py  test_executor.py  test_factor_evaluator.py  test_factory_reset.py  test_features.py  test_ingestor_event_loop.py  test_iteration_context.py  test_iterative_cycle.py  test_market_data_availability.py  test_miner_agent.py  test_model_trainer.py  test_narration.py  test_notifications.py  test_oauth_codex_parity.py  test_ollama_router.py  test_ooda.py  test_ooda_activation.py  test_orchestration_api.py  test_orchestration_integration.py  test_orchestration_visibility.py  test_orchestrator.py  test_persistence.py  test_plan_persistence.py  (+23 more)
(+83 files in other folders)
